src/snapshots/rlox__parse__tests__invalid_token.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print $;\")"
---
stdout:


stderr:
Error: Lexing error
   ╭─[<unknown>:?:?]
   │
 1 │ print $;
   │       ┬  
   │       ╰── Invalid token
───╯


